Fixed image clipping issue
There was an image clipping issue in the hero section, so I modified the code so that the image doesn't clip when the screen is resized.

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ body {
     height: 100%;
     width: 100%;
     object-fit: cover;
+    display: block;
 }
 
 .half-two {
@@ -184,13 +185,10 @@ h1 {
 
     .half-one {
         flex: none;
-        height: 50dvh;
-        width: 100%;
     }
 
     .half-two {
         flex: none;
         height: 50dvh;
-        width: 100%;
     }
 }
